EnterpriseFlowsRepository/api-definitions#7 Add documentation informations.
